11.k8s-test/04.ingress/03-b.ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tls
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - 2048.ajway.co.kr
    secretName: 2048-secret
  - hosts:
    - tetris.ajway.co.kr
    secretName: tetris-secret
  rules:
  - host: 2048.ajway.co.kr
    http:
      paths:
      - backend:
          serviceName: svc-2048
          servicePort: 80
  - host: tetris.ajway.co.kr
    http:
      paths:
      - backend:
          serviceName: svc-tetris
          servicePort: 80
